[gd_scene load_steps=5 format=3 uid="uid://b11sr0wx27qpv"]

[ext_resource type="Script" uid="uid://8esgeehvxsnc" path="res://game/scripts/gameplay/ferris_wheel.gd" id="1_ol2sb"]
[ext_resource type="Texture2D" uid="uid://dtrvcggklpvpv" path="res://game/assets/art/world/circle.png" id="2_ol2sb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_77t4k"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7aagq"]
radius = 128.0

[node name="ferris_wheel" type="Node2D"]
script = ExtResource("1_ol2sb")

[node name="base" type="StaticBody2D" parent="."]

[node name="sprite" type="Sprite2D" parent="base"]

[node name="pin" type="PinJoint2D" parent="."]
node_a = NodePath("../base")
node_b = NodePath("../body")

[node name="body" type="RigidBody2D" parent="."]

[node name="grab_area" type="Area2D" parent="body"]
scale = Vector2(4, 4)

[node name="collision" type="CollisionShape2D" parent="body/grab_area"]
shape = SubResource("CircleShape2D_77t4k")

[node name="sprite" type="Sprite2D" parent="body"]
scale = Vector2(4, 4)
texture = ExtResource("2_ol2sb")

[node name="handle" type="Sprite2D" parent="body/sprite"]
modulate = Color(0.19392183, 0.53548455, 0.99999994, 1)
position = Vector2(0, -24)
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_ol2sb")

[node name="collision" type="CollisionShape2D" parent="body"]
shape = SubResource("CircleShape2D_7aagq")

[connection signal="area_entered" from="body/grab_area" to="." method="_on_grab_area_area_entered"]
[connection signal="area_exited" from="body/grab_area" to="." method="_on_grab_area_area_exited"]
